...
                        .resizable()
                        .scaledToFit()
                        .frame(width: 100, height: 100)
                        .foregroundColor(.red)
                        .opacity(0.5)
                        .padding()
                    Text("No favorites yet!")
                        .font(.title3)
                        .foregroundColor(.gray)
                }
                .transition(.opacity)
                .scaleEffect(viewModel.animateImage ? 1.1 : 1.0)
                .onAppear {
...
                .listStyle(PlainListStyle())
                .sheet(item: $viewModel.selectedCat) { cat in
                    CatDetailView(cat: cat)
                }
            }
        }
        .navigationTitle("Favorites")
    }
}

